# customer_churn

./: .gitattributes  .gitignore  README.md  pyproject.toml
modeling/: customer_churn_analysis.ipynb
shenv/: pyvenv.cfg
